<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_8dp">

        <TextView
            android:id="@+id/price_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_8dp"
            android:text="@string/price"
            android:textSize="@dimen/txt_18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/price_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/price_sort">

            <RadioButton
                android:id="@+id/sortPriceDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:text="@string/high" />

            <RadioButton
                android:id="@+id/sortPriceAsc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:text="@string/low" />
        </RadioGroup>

        <TextView
            android:id="@+id/rating_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_8dp"
            android:text="@string/rating"
            android:textSize="@dimen/txt_18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/price_options" />

        <RadioGroup
            android:id="@+id/rating_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rating_sort">

            <RadioButton
                android:id="@+id/sortRatingDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:text="@string/high" />

            <RadioButton
                android:id="@+id/sortRatingAsc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:text="@string/low" />
        </RadioGroup>

        <TextView
            android:id="@+id/type_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_8dp"
            android:text="@string/type"
            android:textSize="@dimen/txt_18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rating_options" />

        <RadioGroup
            android:id="@+id/type_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/type_sort">

            <RadioButton
                android:id="@+id/sortVegan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:text="@string/vegan" />

            <RadioButton
                android:id="@+id/sortNonVegan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:text="@string/non_vegan" />
        </RadioGroup>

        <TextView
            android:id="@+id/flavor_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_8dp"
            android:text="@string/flavor"
            android:textSize="@dimen/txt_18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/type_options" />

        <RadioGroup
            android:id="@+id/flavor_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flavor_sort">

            <RadioButton
                android:id="@+id/sortHot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:text="@string/hot" />

            <RadioButton
                android:id="@+id/sortNotHot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:text="@string/not_hot" />
        </RadioGroup>

        <TextView
            android:id="@+id/availability_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_8dp"
            android:text="@string/availability"
            android:textSize="@dimen/txt_18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flavor_options" />

        <RadioGroup
            android:id="@+id/availability_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/availability_sort">

            <RadioButton
                android:id="@+id/sortAvailable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:text="@string/available" />

            <RadioButton
                android:id="@+id/sortNotAvailable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:text="@string/not_available" />
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/applyBtn"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_margin="@dimen/spacing_16dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="@dimen/spacing_16dp"
            app:backgroundTint="@color/black"
            android:text="@string/apply"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:letterSpacing="0"
            android:textSize="@dimen/txt_18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/availability_options"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/resetBtn"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginHorizontal="@dimen/spacing_16dp"
            android:layout_marginVertical="@dimen/spacing_8dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="@dimen/spacing_16dp"
            app:backgroundTint="@color/grey"
            android:text="@string/reset"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:letterSpacing="0"
            android:textSize="@dimen/txt_18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/applyBtn"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>